项目润色：README、package.json、LICENSE、API 文档等

--- a/project/index.html
+++ b/project/index.html
@@ -2,12 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/x-icon" href="https://japaneselearning.oss-cn-hangzhou.aliyuncs.com/favicon.ico?Expires=1771694526&OSSAccessKeyId=TMP.3KqVx8PVLBEKVdDtSzMNQN7gDh5JxoxTwPXMEh2odxDvyG6qzJo8G7ZtTD8dAxprMRWCetYGqwfsSZ3sdsbHXQ7mThXbAS&Signature=jD6KsA7CmMavrOA%2BxLa%2BXMvX1OI%3D" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Japanese Kana Trainer</title>
-    <meta property="og:image" content="https://bolt.new/static/og_default.png" />
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:image" content="https://bolt.new/static/og_default.png" />
+    <meta name="description" content="日语假名学习应用 - 平假名、片假名认读、听写与测验" />
   </head>
   <body>
     <div id="root"></div>
